# convflow-markdown

./: .dockerignore  .env  .env.example  .gitignore  ORGANIZACAO_FINAL.md  README.md  README_ESTRUTURA.md  check_services.bat  convflow_landing_page.html  docker-compose.yml  menu.bat  package-lock.json  pyproject.toml  requirements.txt  stack_auth_debug.html  stack_auth_endpoint_test.html  stack_auth_final_test.html  stack_auth_login_discovery.html  stack_auth_verification.html  start_backend.bat  start_backend.sh  start_services.bat  start_services.sh  test_neon_auth.html  teste-api-programatica-fixed.ps1  teste-api-programatica.ps1  teste-basico.ps1
docker/: Dockerfile  docker-compose.keycloak.yml  nginx.conf
docs/: API_PROGRAMATICA_EXPLICACAO.md  CLEANUP_SUMMARY.md  DEPENDENCIES.md  DOCKER_DEPLOYMENT.md  FILE_ORGANIZATION.md  KEYCLOAK_CENTRALIZATION.md  KEYCLOAK_CENTRALIZED_AUTH.md  KEYCLOAK_CLIENT_UPDATE.md  KEYCLOAK_REDIRECT_DEBUG.md  KEYCLOAK_REDIRECT_FIX.md  KEYCLOAK_REDIRECT_FIX_V2.md  ORGANIZACAO_COMPLETA.md  PROJECT_STATUS.md  SERVICE_MANAGEMENT.md
docs/archive/: GUIA_GERENCIAMENTO_USUARIOS.md  KEYCLOAK_MANUAL_SETUP.md  KEYCLOAK_MIGRATION_COMPLETE.md  KEYCLOAK_SETUP.md  KEYCLOAK_SUCESSO.md  guia-keycloak-setup.html  guia-keycloak-v26.html  stack_auth_systematic_test.html
frontend/: README.md  backlog.md  index.html  landing_page.html  package-lock.json  package.json  updates.txt
frontend/public/: auth-check.enhanced.js  (+5 more)
scripts/: deploy.sh  migrate_to_keycloak_unified.bat  migrate_to_keycloak_unified.sh
src/: __init__.py  main.py  main_keycloak.py
(+76 files in other folders)
